--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                   <i class="bx bxs-quote-alt-right quote-icon-right"></i>
                 </p>
               </div>
-            </div> --> -->
+            </div> -->
             <!-- End testimonial item -->
 
           </div>
