--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <section id="hero">
     <div class="hero-container">
       <h1>Hello, Aku Dimas Suryaputra</h1>
-      <h2>Saya adalah seorang Web Developer</h2>
+      <h2>Saya adalah seorang Website Developer</h2>
       
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
     </div>
