--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
         <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
         <li><a class="nav-link scrollto" href="#about">Tentang</a></li>
         <li><a class="nav-link scrollto " href="#portfolio">Portfolio</a></li>
-        <!-- <li><a class="nav-link scrollto" href="#services">Services</a></li> -->
         <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
       </ul>
       <i class="bi bi-list mobile-nav-toggle"></i>
@@ -46,7 +45,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container">
-      <h1>Hello, Aku Dimas Suryaputra</h1>
+      <h1>Halo!, Perkenalkan saya Dimas Suryaputra</h1>
       <h2>Saya adalah seorang Website Developer</h2>
       
       <a href="#about" class="btn-scroll scrollto" title="Scroll Down"><i class="bx bx-chevron-down"></i></a>
